test: исправить на чистый Junit